write warning messages to stderr

XMLWordPrintable

    • b02
    • generic
    • generic

        HotSpot warning messages should be written to stderr, not stdout.

        After the HotSpot perm generation was removed under 6964458, HotSpot issues a warning if -XX:PermSize or -XX:MaxPermSize is used on the command line. The jdk build usese these options when running java to generate sources. The warning messages ended up in the generated source files, causing javac compilation failures:

        solaris-i586/gensrc/java/nio/DirectByteBuffer.java:1: error: class, interface, or enum expected
        Java HotSpot(TM) Client VM warning: ignoring option PermSize=32m; support was removed in 8.0
                                                                          ^

              Assignee:
              John Coomes (Inactive)
              Reporter:
              John Coomes (Inactive)
              Votes:
              0 Vote for this issue
              Watchers:
              1 Start watching this issue

                Created:
                Updated:
                Resolved:
                Imported:
                Indexed: