7199082: write warning messages to stderr

Reviewed-by: ysr, dholmes, sla